// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/extensions.proto


export interface ConfidentialWithdrawWithheldTokensFromAccountsAccountsProto {
  'mint'?: (string);
  'feeRecipient'?: (string);
  'withdrawWithheldAuthority'?: (string);
  'sourceAccounts'?: (string)[];
  'multisigSigners'?: (string)[];
}

export interface ConfidentialWithdrawWithheldTokensFromAccountsAccountsProto__Output {
  'mint': (string);
  'feeRecipient': (string);
  'withdrawWithheldAuthority': (string);
  'sourceAccounts': (string)[];
  'multisigSigners': (string)[];
}
