// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/extensions.proto


export interface DisableHarvestToMintAccountsProto {
  'account'?: (string);
  'confidentialTransferFeeAuthority'?: (string);
  'multisigSigners'?: (string)[];
}

export interface DisableHarvestToMintAccountsProto__Output {
  'account': (string);
  'confidentialTransferFeeAuthority': (string);
  'multisigSigners': (string)[];
}
