// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/extensions.proto


export interface EnableHarvestToMintAccountsProto {
  'mint'?: (string);
  'confidentialTransferFeeAuthority'?: (string);
  'multisigSigners'?: (string)[];
}

export interface EnableHarvestToMintAccountsProto__Output {
  'mint': (string);
  'confidentialTransferFeeAuthority': (string);
  'multisigSigners': (string)[];
}
