// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/extensions.proto

export const ExtensionType = {
  UNINITIALIZED_EXT: 'UNINITIALIZED_EXT',
  TRANSFER_FEE_CONFIG_EXT: 'TRANSFER_FEE_CONFIG_EXT',
  TRANSFER_FEE_AMOUNT_EXT: 'TRANSFER_FEE_AMOUNT_EXT',
  MINT_CLOSE_AUTHORITY_EXT: 'MINT_CLOSE_AUTHORITY_EXT',
  CONFIDENTIAL_TRANSFER_MINT_EXT: 'CONFIDENTIAL_TRANSFER_MINT_EXT',
  CONFIDENTIAL_TRANSFER_ACCOUNT_EXT: 'CONFIDENTIAL_TRANSFER_ACCOUNT_EXT',
  DEFAULT_ACCOUNT_STATE_EXT: 'DEFAULT_ACCOUNT_STATE_EXT',
  IMMUTABLE_OWNER_EXT: 'IMMUTABLE_OWNER_EXT',
  MEMO_TRANSFER_EXT: 'MEMO_TRANSFER_EXT',
  NON_TRANSFERABLE_EXT: 'NON_TRANSFERABLE_EXT',
  INTEREST_BEARING_CONFIG_EXT: 'INTEREST_BEARING_CONFIG_EXT',
  CPI_GUARD_EXT: 'CPI_GUARD_EXT',
  PERMANENT_DELEGATE_EXT: 'PERMANENT_DELEGATE_EXT',
  NON_TRANSFERABLE_ACCOUNT_EXT: 'NON_TRANSFERABLE_ACCOUNT_EXT',
  TRANSFER_HOOK_EXT: 'TRANSFER_HOOK_EXT',
  TRANSFER_HOOK_ACCOUNT_EXT: 'TRANSFER_HOOK_ACCOUNT_EXT',
  CONFIDENTIAL_TRANSFER_FEE_CONFIG_EXT: 'CONFIDENTIAL_TRANSFER_FEE_CONFIG_EXT',
  CONFIDENTIAL_TRANSFER_FEE_AMOUNT_EXT: 'CONFIDENTIAL_TRANSFER_FEE_AMOUNT_EXT',
  METADATA_POINTER_EXT: 'METADATA_POINTER_EXT',
  TOKEN_METADATA_EXT: 'TOKEN_METADATA_EXT',
  GROUP_POINTER_EXT: 'GROUP_POINTER_EXT',
  TOKEN_GROUP_EXT: 'TOKEN_GROUP_EXT',
  GROUP_MEMBER_POINTER_EXT: 'GROUP_MEMBER_POINTER_EXT',
  TOKEN_GROUP_MEMBER_EXT: 'TOKEN_GROUP_MEMBER_EXT',
} as const;

export type ExtensionType =
  | 'UNINITIALIZED_EXT'
  | 0
  | 'TRANSFER_FEE_CONFIG_EXT'
  | 1
  | 'TRANSFER_FEE_AMOUNT_EXT'
  | 2
  | 'MINT_CLOSE_AUTHORITY_EXT'
  | 3
  | 'CONFIDENTIAL_TRANSFER_MINT_EXT'
  | 4
  | 'CONFIDENTIAL_TRANSFER_ACCOUNT_EXT'
  | 5
  | 'DEFAULT_ACCOUNT_STATE_EXT'
  | 6
  | 'IMMUTABLE_OWNER_EXT'
  | 7
  | 'MEMO_TRANSFER_EXT'
  | 8
  | 'NON_TRANSFERABLE_EXT'
  | 9
  | 'INTEREST_BEARING_CONFIG_EXT'
  | 10
  | 'CPI_GUARD_EXT'
  | 11
  | 'PERMANENT_DELEGATE_EXT'
  | 12
  | 'NON_TRANSFERABLE_ACCOUNT_EXT'
  | 13
  | 'TRANSFER_HOOK_EXT'
  | 14
  | 'TRANSFER_HOOK_ACCOUNT_EXT'
  | 15
  | 'CONFIDENTIAL_TRANSFER_FEE_CONFIG_EXT'
  | 16
  | 'CONFIDENTIAL_TRANSFER_FEE_AMOUNT_EXT'
  | 17
  | 'METADATA_POINTER_EXT'
  | 18
  | 'TOKEN_METADATA_EXT'
  | 19
  | 'GROUP_POINTER_EXT'
  | 20
  | 'TOKEN_GROUP_EXT'
  | 21
  | 'GROUP_MEMBER_POINTER_EXT'
  | 22
  | 'TOKEN_GROUP_MEMBER_EXT'
  | 23

export type ExtensionType__Output = typeof ExtensionType[keyof typeof ExtensionType]
