// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/extensions.proto


export interface InitializeAccountsProto {
  'metadata'?: (string);
  'updateAuthority'?: (string);
  'mint'?: (string);
  'mintAuthority'?: (string);
}

export interface InitializeAccountsProto__Output {
  'metadata': (string);
  'updateAuthority': (string);
  'mint': (string);
  'mintAuthority': (string);
}
