// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/extensions.proto


export interface InitializeMemberAccountsProto {
  'member'?: (string);
  'memberMint'?: (string);
  'memberMintAuthority'?: (string);
  'group'?: (string);
  'groupUpdateAuthority'?: (string);
}

export interface InitializeMemberAccountsProto__Output {
  'member': (string);
  'memberMint': (string);
  'memberMintAuthority': (string);
  'group': (string);
  'groupUpdateAuthority': (string);
}
