// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/extensions.proto

import type { InitializeTransferFeeConfigAccountsProto as _vixen_parser_InitializeTransferFeeConfigAccountsProto, InitializeTransferFeeConfigAccountsProto__Output as _vixen_parser_InitializeTransferFeeConfigAccountsProto__Output } from '../../vixen/parser/InitializeTransferFeeConfigAccountsProto';
import type { InitializeTransferFeeConfigDataProto as _vixen_parser_InitializeTransferFeeConfigDataProto, InitializeTransferFeeConfigDataProto__Output as _vixen_parser_InitializeTransferFeeConfigDataProto__Output } from '../../vixen/parser/InitializeTransferFeeConfigDataProto';

export interface InitializeTransferFeeConfigIxProto {
  'accounts'?: (_vixen_parser_InitializeTransferFeeConfigAccountsProto | null);
  'data'?: (_vixen_parser_InitializeTransferFeeConfigDataProto | null);
}

export interface InitializeTransferFeeConfigIxProto__Output {
  'accounts': (_vixen_parser_InitializeTransferFeeConfigAccountsProto__Output | null);
  'data': (_vixen_parser_InitializeTransferFeeConfigDataProto__Output | null);
}
