// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/extensions.proto


export interface ReallocateAccountsProto {
  'account'?: (string);
  'payerAccount'?: (string);
  'owner'?: (string);
  'multisigSigners'?: (string)[];
}

export interface ReallocateAccountsProto__Output {
  'account': (string);
  'payerAccount': (string);
  'owner': (string);
  'multisigSigners': (string)[];
}
