// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/extensions.proto

import type { ExtensionType as _vixen_parser_ExtensionType, ExtensionType__Output as _vixen_parser_ExtensionType__Output } from '../../vixen/parser/ExtensionType';

export interface ReallocateDataProto {
  'extensionsTypes'?: (_vixen_parser_ExtensionType)[];
}

export interface ReallocateDataProto__Output {
  'extensionsTypes': (_vixen_parser_ExtensionType__Output)[];
}
