// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/extensions.proto


export interface SetTransferFeeAccountsProto {
  'mint'?: (string);
  'mintFeeAccOwner'?: (string);
  'multisigSigners'?: (string)[];
}

export interface SetTransferFeeAccountsProto__Output {
  'mint': (string);
  'mintFeeAccOwner': (string);
  'multisigSigners': (string)[];
}
