// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/extensions.proto


export interface UpdateAccountsProto {
  'mint'?: (string);
  'extensionAuthority'?: (string);
  'multisigSigners'?: (string)[];
}

export interface UpdateAccountsProto__Output {
  'mint': (string);
  'extensionAuthority': (string);
  'multisigSigners': (string)[];
}
