// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/extensions.proto


export interface WithdrawExcessLamportsAccountsProto {
  'sourceAccount'?: (string);
  'destinationAccount'?: (string);
  'authority'?: (string);
  'multisigSigners'?: (string)[];
}

export interface WithdrawExcessLamportsAccountsProto__Output {
  'sourceAccount': (string);
  'destinationAccount': (string);
  'authority': (string);
  'multisigSigners': (string)[];
}
